Fix pill margin and nav width before collapse

--- a/client/src/routes/Pages/components/Header/Header.scss
+++ b/client/src/routes/Pages/components/Header/Header.scss
@@ -23,6 +23,7 @@ $header-height: 85px;
     }
     
     .pill {
+      margin-top: 8px;
       margin-left: 15px;
     }
 
@@ -78,7 +79,7 @@ $header-height: 85px;
   }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 920px) {
   .page-header {
     padding: 0 60px;
 
@@ -110,5 +111,11 @@ $header-height: 85px;
       }
     }
 
+  }
+}
+
+@media screen and (max-width: $mobile-sm) {
+  .page-header .pill {
+    display: none;
   }
 }
